Upgrade Tycho, Eclipse to 2018-12 (4.10) and remove x86 environments

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <tycho-version>0.21.0-SNAPSHOT</tycho-version>
-    <tycho-extras-version>0.21.0-SNAPSHOT</tycho-extras-version>
+    <tycho-version>2.1.0</tycho-version>
+    <tycho-extras-version>2.1.0</tycho-extras-version>
   </properties>
 
   <modules>
@@ -27,8 +27,8 @@
 
   <repositories>
 	<repository>
-	   <id>eclipse-luna</id>
-	   <url>http://download.eclipse.org/releases/luna</url>
+	   <id>eclipse-2018-12</id>
+	   <url>http://download.eclipse.org/releases/2018-12/</url>
 	   <layout>p2</layout>
 	</repository>
   </repositories>
@@ -49,17 +49,7 @@
             <environment>
               <os>win32</os>
               <ws>win32</ws>
-              <arch>x86</arch>
-            </environment>
-            <environment>
-              <os>win32</os>
-              <ws>win32</ws>
               <arch>x86_64</arch>
-            </environment>
-            <environment>
-              <os>linux</os>
-              <ws>gtk</ws>
-              <arch>x86</arch>
             </environment>
             <environment>
               <os>linux</os>
